feat(api): profile PATCH method - use datastore.Profile as json for /api/profiles/{profile] - take datastore.Profile in AddProfile and OverwriteProfile
